src/routes/styles/foundation/_base.scss
/* work-sans-latin-wght-normal */
@font-face {
	font-family: 'Work Sans Variable';
	font-style: normal;
	font-display: swap;
	font-weight: 100 900;
	size-adjust: 110%;
	src: url(@fontsource-variable/work-sans/files/work-sans-latin-wght-normal.woff2)
		format('woff2-variations');
	unicode-range:
		U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
		U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* work-sans-latin-ext-wght-normal */
@font-face {
	font-family: 'Work Sans Variable';
	font-style: normal;
	font-display: swap;
	font-weight: 100 900;
	size-adjust: 110%;
	src: url(@fontsource-variable/work-sans/files/work-sans-latin-ext-wght-normal.woff2)
		format('woff2-variations');
	unicode-range:
		U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329,
		U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F,
		U+A720-A7FF;
}

html {
	line-height: 1.8;
	text-underline-offset: calc(var(--half-leading) / 3);
	overflow-wrap: anywhere;
	line-break: strict;
	font-family: var(--ff-sans-serif);
	font-weight: 400;
	font-variation-settings: 'wght' 400;
	color-scheme: light dark;
	scrollbar-gutter: stable both-edges;
}

body {
	margin: 0;
	color: var(--c-primary);
	font-feature-settings: 'case';
	background: var(--c-bg-primary);
}

h1,
h2,
h3,
h4,
h5,
h6,
strong {
	font-weight: 600;
	font-variation-settings: 'wght' 600;
}

h1,
h2,
h3,
h4 {
	margin-block-start: calc(var(--spacing-l) - var(--half-leading));
	letter-spacing: -0.025em;
	text-wrap: wrap;
	text-wrap: pretty;
}

h1 + h2,
h2 + h3,
h3 + h4 {
	margin-block-start: calc(var(--spacing-m) - var(--half-leading));
}

h1 {
	font-size: 1.875rem;
	@media screen and (min-width: 1024px) {
		margin-block-start: calc(var(--spacing-s) - var(--half-leading));
	}
}

h2 {
	font-size: 1.5rem;
}

h3 {
	font-size: 1.25rem;
}

h4 {
	font-size: 1.125rem;
}

address {
	font-style: normal;
}

ul,
ol {
	margin-block-start: calc(var(--spacing-m) - var(--half-leading));
	margin-block-end: 0;
	padding-inline-start: 1.25rem;
}

p {
	margin-block-start: calc(var(--spacing-m) - var(--half-leading));
}

h1 + p,
h2 + p,
h3 + p,
h4 + p,
h1 + ul,
h2 + ul,
h3 + ul,
h4 + ul {
	margin-block-start: calc(var(--spacing-s) - var(--half-leading));
}

a:not(:has(img)) {
	color: var(--c-secondary);

	@media (any-hover) {
		&:hover {
			text-decoration: none;
			color: var(--c-ac-fg-primary);
			background-color: var(--c-ac-primary);
		}
	}

	&[rel~='external']::after {
		content: '↗';
		display: inline-block;
		vertical-align: super;
		font-size: 0.625em;
		margin-inline-start: 0.1em;
		text-decoration: none;
	}
}

blockquote {
	background-color: var(--c-bg-secondary);
}

